--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,10 @@
 
 geopandas>=0.12.0
 numba==0.*
-numpy>=1,<3
+numpy>=1
 matplotlib==3.*
-pyproj>=3.4,<4
-rasterio>=1.3,<2
+pyproj>=3.4
+rasterio>=1.3
 scipy==1.*
 tqdm
 geoutils
